--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <hr style="margin:30px 0;">
             <div class="sec-three" style="display: flex; justify-content: space-between; width: 1200px;">
                 <div>
-                    <h1>Check if the number is simple</h1>
+                    <h1>Check if the number is prime</h1>
                     <input type="number" id="n">
                     <button id="ifIsPrime">Check</button>
                     <span id="primeNumbers"></span>
